--- a/src/components/common/SignupModal.css
+++ b/src/components/common/SignupModal.css
@@ -61,3 +61,36 @@
     text-align: center;
     margin-top: 1rem;
   }
+  
+  .password-requirements {
+    margin-top: 10px;
+    font-size: 0.9em;
+  }
+  
+  .password-requirements ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  
+  .password-requirements li {
+    margin: 5px 0;
+    padding-left: 20px;
+    position: relative;
+  }
+  
+  .password-requirements li::before {
+    content: "✕";
+    position: absolute;
+    left: 0;
+    color: #ff4444;
+  }
+  
+  .password-requirements li.valid::before {
+    content: "✓";
+    color: #4CAF50;
+  }
+  
+  .signup-submit-btn:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+  }
