--- a/src/components/modules/Main/MainInvestmentReports.css
+++ b/src/components/modules/Main/MainInvestmentReports.css
@@ -3,12 +3,16 @@
     padding: 40px;
   }
   .report-list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 353px);
+    grid-auto-rows: 1fr;
     gap: 20px;
     justify-content: center;
-    flex-wrap: wrap;
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
+  }
+  .report-list > div {
+    height: 100%;
   }
   .more-btn {
     margin-top: 20px;
@@ -18,4 +22,16 @@
     color: white;
     border-radius: 8px;
     cursor: pointer;
+  }
+
+  @media (max-width: 1160px) {
+    .report-list {
+      grid-template-columns: repeat(2, 353px);
+    }
+  }
+  
+  @media (max-width: 780px) {
+    .report-list {
+      grid-template-columns: 353px;
+    }
   }
