--- a/src/components/modules/Main/MainInvestmentReports.css
+++ b/src/components/modules/Main/MainInvestmentReports.css
@@ -1,15 +1,16 @@
 .investment-reports {
     text-align: center;
-    padding: 40px;
+    padding: 20px;
   }
   .report-list {
     display: grid;
-    grid-template-columns: repeat(3, 353px);
+    grid-template-columns: repeat(3, 356px);
     grid-auto-rows: 1fr;
-    gap: 20px;
+    gap: 16px;
     justify-content: center;
     max-width: 1100px;
     margin: 0 auto;
+    justify-items: center;
   }
   .report-list > div {
     height: 100%;
@@ -26,12 +27,13 @@
 
   @media (max-width: 1160px) {
     .report-list {
-      grid-template-columns: repeat(2, 353px);
+      grid-template-columns: 536px;
     }
   }
   
-  @media (max-width: 780px) {
+  @media (max-width: 580px) {
     .report-list {
-      grid-template-columns: 353px;
+      grid-template-columns: 260px;
+      max-width: 260px;
     }
   }
